--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "rehype-raw": "^7.0.0",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
